added New-PaTag and Set-PaTag

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,15 +3,18 @@ theme: readthedocs
 pages:
   - Home: index.md
   - Cmdlets:
-    - Get-PaConfigDiff: cmdlets/Get-PaConfigDiff.md
-    - Get-PaAddress: cmdlets/Get-PaAddress.md
     - Invoke-PaApiReport: cmdlets/Invoke-PaApiReport.md
-    - Get-PaDevice: cmdlets/Get-PaDevice.md
-    - Invoke-PaApiOperation: cmdlets/Invoke-PaApiOperation.md
-    - Invoke-PaCommit: cmdlets/Invoke-PaCommit.md
-    - Invoke-PaApiConfig: cmdlets/Invoke-PaApiConfig.md
-    - Get-PaCustomReport: cmdlets/Get-PaCustomReport.md
-    - Get-PaJob: cmdlets/Get-PaJob.md
     - Set-PaCustomReport: cmdlets/Set-PaCustomReport.md
     - Set-PaAddress: cmdlets/Set-PaAddress.md
+    - Get-PaConfigDiff: cmdlets/Get-PaConfigDiff.md
+    - Get-PaJob: cmdlets/Get-PaJob.md
+    - Get-PaAddress: cmdlets/Get-PaAddress.md
+    - Invoke-PaApiConfig: cmdlets/Invoke-PaApiConfig.md
+    - Get-PaCustomReport: cmdlets/Get-PaCustomReport.md
     - Invoke-PaCustomReport: cmdlets/Invoke-PaCustomReport.md
+    - New-PaTag: cmdlets/New-PaTag.md
+    - Invoke-PaApiOperation: cmdlets/Invoke-PaApiOperation.md
+    - Set-PaTag: cmdlets/Set-PaTag.md
+    - Invoke-PaCommit: cmdlets/Invoke-PaCommit.md
+    - Get-PaDevice: cmdlets/Get-PaDevice.md
+    - Get-PaTag: cmdlets/Get-PaTag.md
